[package]
name = "mdbook-trace"
version = "0.1.0"
edition = "2021"
authors = ["Dexter Duckworth <dexterduck@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
description = "A traceable document preprocessor for mdbook."
keywords = ["mdbook", "preprocessor"]
exclude = ["test_book/*"]
repository = "https://github.com/dexterduck/mdbook-trace"
homepage = "https://github.com/dexterduck/mdbook-trace"

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
mdbook = { version="0.4.21", default-features = false }
once_cell = "1.13.1"
regex = "1.6.0"
semver = "1.0.13"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
toml = "0.5.9"
